--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
@@ -36,7 +38,8 @@
               "src/assets/js/slick.min.js",
               "src/assets/js/contact.js",
               "src/assets/js/jquery.paroller.min.js",
-              "src/assets/js/app.js"
+              "src/assets/js/app.js",
+              "node_modules/owl.carousel/dist/owl.carousel.js"
             ]
           },
           "configurations": {
