--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "ngx-owl-carousel": "^2.0.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.2.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
